--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,10 @@
     -->
   </body>
   <script
+    src="https://kit.fontawesome.com/5c492f2588.js"
+    crossorigin="anonymous"
+  ></script>
+  <script
     src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
     integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
     crossorigin="anonymous"
