--- a/public/index.html
+++ b/public/index.html
@@ -25,12 +25,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Tasks Tracker</title>
-    <link
+    <!-- <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
-    />
+    /> -->
   </head>
   <body class="bg-light pt-2 pb-3">
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -50,7 +50,7 @@
     src="https://kit.fontawesome.com/5c492f2588.js"
     crossorigin="anonymous"
   ></script>
-  <script
+  <!-- <script
     src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
     integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
     crossorigin="anonymous"
@@ -59,5 +59,5 @@
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
     integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
     crossorigin="anonymous"
-  ></script>
+  ></script> -->
 </html>
